Fix crash in NodeDelegate

Some node types don't feature all properties, but to keep alignment,
the list contains nullptr entries.

BUG:454198